# murdock

./: .devdata.env  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  build.sh  config.py  config.py.example  docker-compose.api-only.yml  docker-compose.api.yml  docker-compose.yml  github_webhook.py  jobs.py  log.py  main.py  murdock.py  murdock.toml.example  pyproject.toml  requirements.txt  riot-ci.py  riot_ci.py  setup.cfg  tox.ini  util.py
.github/workflows/: continuous-integration.yml
agithub/: base.py
frontend/: Dockerfile  main.py
murdock/: __init__.py  app.py  config.py  database.py  github.py  job.py  job_containers.py  log.py  main.py  models.py  murdock.py  notify.py  task.py
murdock/database/: __init__.py  mongodb.py  postgresql.py
murdock/templates/: badge.svg.j2  comment.md.j2
murdock/tests/: conftest.py  test_api.py  test_config.py  test_database.py  test_database_mongodb.py  test_database_postgresql.py  test_github.py  test_job.py  test_job_containers.py  test_models.py  test_murdock.py  test_notify.py  test_templates.py
murdock_ci/: __init__.py  config.py  github_webhook.py  jobs.py  murdock.py  util.py
scripts/: Dockerfile  run-with-progress.sh  run.sh
tests/: test_api.py
traefik/: http.yml  traefik.yml
utils/: build.sh  run-with-progress.sh  run.sh
webapp/: Dockerfile  main.py
